// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features should render default 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="box"
    >
      <p
        class="players"
      >
        <span
          aria-label="Anzahl Spieler"
          role="img"
        >
          👤
        </span>
        <b
          class="highlight"
        >
          2 - 4
           Spieler
        </b>
      </p>
      <p
        class="players"
      >
        <span
          aria-label="Altersempfehlung"
          role="img"
        >
          📅
        </span>
        <b
          class="highlight"
        >
          ab 
          4
           Jahren
        </b>
      </p>
      <p
        class="players"
      >
        <span
          aria-label="Spieldauer"
          role="img"
        >
          ⏳
        </span>
        <b
          class="highlight"
        >
          duration
        </b>
      </p>
    </div>
  </div>
</div>
`;

exports[`Features should render with simple rules 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="box"
    >
      <p
        class="players"
      >
        <span
          aria-label="Anzahl Spieler"
          role="img"
        >
          👤
        </span>
        <b
          class="highlight"
        >
          2
           Spieler
        </b>
      </p>
      <p
        class="players"
      >
        <span
          aria-label="Altersempfehlung"
          role="img"
        >
          📅
        </span>
        <b
          class="highlight"
        >
          ab 
          4
           Jahren
        </b>
      </p>
      <p
        class="players"
      >
        <span
          aria-label="Spieldauer"
          role="img"
        >
          ⏳
        </span>
        <b
          class="highlight"
        >
          duration
        </b>
      </p>
    </div>
    <div>
      <p
        class="players"
      >
        <span
          aria-label="Einfache Regeln"
          role="img"
        >
          🏋️‍♀️
        </span>
        <b
          class="highlight"
        >
          einfach
        </b>
      </p>
    </div>
  </div>
</div>
`;
